error.txt
   Compiling ruthe v0.1.0 (/Users/kisaczka/Desktop/code/ruthe)
warning: unused variable: `interp`
    --> src/lib.rs:1393:33
     |
1393 | fn builtin_list<const N: usize>(interp: &Interpreter<N>, args: ValRef) -> Result<ValRef, StrRef> {
     |                                 ^^^^^^ help: if this is intentional, prefix it with an underscore: `_interp`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: `ruthe` (lib) generated 1 warning (run `cargo fix --lib -p ruthe` to apply 1 suggestion)
warning: `ruthe` (lib test) generated 1 warning (1 duplicate)
error[E0599]: no method named `capacity` found for struct `Arena<N>` in the current scope
   --> examples/benchmark.rs:307:55
    |
307 |     println!("Arena capacity: {} cells", interp.arena.capacity());
    |                                                       ^^^^^^^^ method not found in `Arena<8192>`

error[E0599]: no method named `available` found for struct `Arena<N>` in the current scope
   --> examples/benchmark.rs:309:56
    |
309 |     println!("Arena available: {} cells", interp.arena.available());
    |                                                        ^^^^^^^^^ method not found in `Arena<8192>`

error[E0599]: no method named `capacity` found for struct `Arena<N>` in the current scope
   --> examples/benchmark.rs:312:52
    |
312 |         (interp.arena.used() as f64 / interp.arena.capacity() as f64) * 100.0
    |                                                    ^^^^^^^^ method not found in `Arena<8192>`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `ruthe` (example "benchmark") due to 3 previous errors
